--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_schedule">Schedule</string>
     <string name="title_plants">Plants</string>
     <string name="title_test">Test</string>
+    <string name="button_connect">Connect</string>
 </resources>
