--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="title_schedule">Schedule</string>
     <string name="title_plants">Plants</string>
     <string name="title_test">Test</string>
-    <string name="button_connect">Connect</string>
+    <string name="home_connect">Connect</string>
     <string name="system_hose">Hose</string>
     <string name="system_next_watering">Next watering</string>
     <string name="system_amount">Amount</string>
@@ -19,4 +19,6 @@
     <string name="no">No</string>
     <string name="system_days">days</string>
     <string name="system_hours">hours</string>
+    <string name="connection_status">Connection status:</string>
+    <string name="home_disconnect">Disconnect</string>
 </resources>
