--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="system_next_watering">Next watering</string>
     <string name="system_amount">Amount</string>
     <string name="system_interval">Interval</string>
-    <string name="system_update">Ask for update</string>
+    <string name="system_update">Update</string>
     <string name="system_empty">...</string>
     <string name="system_receive">Receive updates</string>
     <string name="system_water_level">Water level:</string>
