--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="_2">2</string>
     <string name="_3">3</string>
     <string name="grid_plant_image">Plant image</string>
+    <string name="schedule_hose">Hose:</string>
 </resources>
